--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,7 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 50px;
+	margin-top: 46px;
 	border-bottom: 3px solid #b999c8;
 }
 
